# maze_crawler_rl

./: .gitignore  AGENTS.md  README.md  agent.py  constants.py  env.py  eval.py  evaluate_model.py  kaggle_patches.py  main.py  make_submission.sh  model.py  opponent.py  pyproject.toml  submission.md  submission_agent.py  train.py
logs/tensorboard/crawl_ppo_0/: events.out.tfevents.1781479425.medea.85582.0
logs/tensorboard/crawl_ppo_1/: events.out.tfevents.1781378757.hermes.91631.0
logs/tensorboard/crawl_ppo_2/: events.out.tfevents.1781379371.hermes.3182.0
logs/tensorboard/crawl_ppo_5/: events.out.tfevents.1781377947.dhcp-128-189-236-1.ubcsecure.wireless.ubc.ca.80687.0
logs/tensorboard/nas_basic_reward-res4/: events.out.tfevents.1781472256.Michaels-MacBook-Pro-2.local.92540.0
logs/tensorboard/nas_mlp_head/: events.out.tfevents.1781316149.dhcp-206-87-110-73.ubcsecure.wireless.ubc.ca.28701.0
logs/tensorboard/nas_mr1/: events.out.tfevents.1781415886.medea.52714.0  events.out.tfevents.1781428236.medea.34909.0
logs/tensorboard/nas_mr2-res4_1/: events.out.tfevents.1781474022.medea.37899.0
logs/tensorboard/nas_mr2-res6_1/: events.out.tfevents.1781476292.medea.58251.0
logs/tensorboard_archive/initial_action_space/: events.out.tfevents.1781041028.dhcp-128-189-238-7.ubcsecure.wireless.ubc.ca.74108.0
logs/tensorboard_archive/nac_mr2_res6_1/: events.out.tfevents.1781476269.medea.57943.0
logs/tensorboard_archive/nas_nr1/: events.out.tfevents.1781384378.medea.38716.0  events.out.tfevents.1781390449.medea.83565.0
misc/: log_stopper.py
(+1 files in other folders)
